--- a/client/css/index.css
+++ b/client/css/index.css
@@ -11,10 +11,31 @@ body {
 }
 
 .ui.main.body {
-    height: calc(100% - 205px);
     width: 100%;
     overflow-y: auto;
-    overflow-x: hidden;
+    height: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+    .ui.main.body {
+        height: calc(100% - 205px);
+        width: 100%;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+}
+
+
+@media screen and (min-width: 1024px) {
+    .home-img {
+        height: 480px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .home-img {
+        height: 800px;
+    }
 }
 
 .home-img {
